recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:4: error: not found: type python
		return l.head :: Nil[python]None
                                     ^